# TDengine

docs/impl/server/vnode/vse/: vse.md
docs/lib/mAllocator/: mAllocator.md
docs/server/vnode/vse/: vse.md
include/common/: treq.h
include/common/impl/: treqImpl.h
include/libs/mAllocator/: mAllocator.h
include/libs/mAllocator/impl/: mAllocatorImpl.h
include/server/vnode/vse/: vse.h
include/server/vnode/vse/impl/: vseImpl.h
include/server/vnode/vse/meta/: meta.h
include/server/vnode/vse/meta/impl/: metaImpl.h
include/server/vnode/vse/tsdb/: tsdb.h
source/common/src/: treq.c
source/libs/: CMakeLists.txt
source/libs/mAllocator/: CMakeLists.txt
source/libs/mAllocator/src/: mPoolAllocator.c  mStackAllocator.c
source/server/vnode/: CMakeLists.txt
source/server/vnode/inc/: vnodeInt.h
source/server/vnode/tq/: CMakeLists.txt
source/server/vnode/vse/: CMakeLists.txt
source/server/vnode/vse/impl/: CMakeLists.txt
source/server/vnode/vse/impl/inc/: vseBufPool.h  vseBufferPool.h  vseCommit.h  vseDef.h  vseInt.h  vseOptions.h  vseQuery.h  vseWrite.h
source/server/vnode/vse/impl/src/: vse.c  vseBufPool.c  vseCommit.c
source/server/vnode/vse/impl/test/: CMakeLists.txt  vseAppTests.cpp
source/server/vnode/vse/meta/: CMakeLists.txt
source/server/vnode/vse/meta/src/: metaMain.c
source/server/vnode/vse/meta/test/: CMakeLists.txt
source/server/vnode/vse/tsdb/: CMakeLists.txt
src/client/src/: tscSQLParser.c
src/kit/taosdemo/: taosdemo.c
src/query/inc/: qAggMain.h
src/query/src/: qAggMain.c
tests/pytest/query/: query.py
(+2 files in other folders)
